--- a/templates/memorials/memorial_detail.html
+++ b/templates/memorials/memorial_detail.html
@@ -51,7 +51,7 @@
          data-bs-toggle="modal" 
          data-bs-target="#profilePictureModal">
       {% if memorial.profile_public_id %}
-        <img src="https://res.cloudinary.com/dols0zev1/image/upload/{{ memorial.profile_public_id }}.png?{% now 'U' %}" 
+        <img src="https://res.cloudinary.com/dols0zev1/image/upload/c_fill,g_face,h_300,w_220/{{ memorial.profile_public_id }}.png?{% now 'U' %}" 
              alt="Profile Picture of {{ memorial.first_name }}" 
              class="profile-image-clickable"
              data-original-src="https://res.cloudinary.com/dols0zev1/image/upload/{{ memorial.profile_public_id }}.png">
