edit memorial button added

--- a/templates/plans/success.html
+++ b/templates/plans/success.html
@@ -23,8 +23,8 @@
     </div>
     
     <div class="action-buttons">
-      <a href="{% url 'memorials:account_profile' %}" class="action-button view-memorial">
-        My Account
+      <a href="{% url 'memorials:memorial_edit' memorial_id %}" class="action-button view-memorial">
+        Edit Memorial
         <i class="fas fa-chevron-right"></i>
       </a>
       <a href="/" class="action-button return-home">
