new photos added to banners

--- a/templates/memorials/memorial_edit.html
+++ b/templates/memorials/memorial_edit.html
@@ -42,7 +42,7 @@
       </div>
     {% endif %}
 
-    <!-- Banner selection modal -->
+<!-- Banner selection modal -->
     <div id="bannerSelectionModal" class="banner-modal" style="display: none;">
       <p>Select a banner:</p>
       <div class="banner-options">
@@ -62,6 +62,36 @@
              data-type="image"
              data-value="banners/sunflower.jpg"
              alt="Sunflower">
+
+        <img src="{% static 'banners/irish_hillside.jpg' %}"
+             class="banner-option"
+             data-type="image"
+             data-value="banners/irish_hillside.jpg"
+             alt="Irish Hillside">
+
+        <img src="{% static 'banners/mountains.jpg' %}"
+             class="banner-option"
+             data-type="image"
+             data-value="banners/mountains.jpg"
+             alt="Mountains">
+
+        <img src="{% static 'banners/flowers.jpg' %}"
+             class="banner-option"
+             data-type="image"
+             data-value="banners/flowers.jpg"
+             alt="Flowers">
+
+        <img src="{% static 'banners/forest.jpg' %}"
+             class="banner-option"
+             data-type="image"
+             data-value="banners/forest.jpg"
+             alt="Forest">
+
+        <img src="{% static 'banners/waves.jpg' %}"
+             class="banner-option"
+             data-type="image"
+             data-value="banners/waves.jpg"
+             alt="Waves">
       </div>
       <button id="closeBannerModal">Cancel</button>
     </div>
